--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
     "browserify": "^12.0.1",
     "flux": "^2.1.1",
     "grunt": "^0.4.5",
+    "grunt-bower-task": "^0.4.0",
     "grunt-browserify": "^4.0.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-uglify": "^0.11.1",
